<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="constCSV" Id="{67922af1-deb7-0f00-3690-32af369f93c6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	DEFAULT_CSV_FIELD_SEP 	: BYTE := 16#2C;(* Comma ASCII code *)
END_VAR

VAR_GLOBAL CONSTANT
	MAX_CSV_ROWS 			: UDINT := 100;
	MAX_CSV_COLUMNS 		: UDINT := 1; //starts from 0
	MAX_CSV_FIELD_LENGTH	: UDINT := 100;
	
	MAX_SETTING_LENGTH		:INT := 100;
	
	str_mc_filelocation		:STRING := 'C:\PLC\machinesettings.csv';
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>